# qdrant-ingester

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml
qdrant_ingester/: chunker_client.py  config.py  embedder.py  loader.py  main.py  schemas.py
tests/: conftest.py  test_api.py  test_chunker_client.py  test_embedder.py  test_main.py
