[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "qdrant-ingester"
version = "0.1.0"
description = "FastAPI service: embed document chunks and upsert into Qdrant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.9.0",
    "fastembed>=0.3.0",
    "more-itertools>=10.0",
    "psutil>=5.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "respx>=0.26.0", "pytest-cov", "pytest-mock"]

[tool.setuptools.packages.find]
where = ["."]
